[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "douyinapipy"
version = "0.1.13.post1"
authors = [
    { name="tiktoka studio", email="admin@tiktokastudio.com" },
]
description = "Asyncio Douyin data scraping tool"
readme = "README.md"
requires-python = ">=3.8"

keywords = ["douyin", "python3", "scraper", "unofficial", "douyin-scraper", "douyin scraper", "asyncio", "playwright-python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright~=1.29",
    "pydantic",
    "requests",
    "numpy",
    "opencv-python"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "tox",
]
docs = [
    "docutils>=0.18",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "autodoc_pydantic",
    "sphinx-tabs",
]

[project.urls]
"Homepage" = "https://github.com/Russell-Newton/DouyinPy"
"Documentation" = "https://douyinpy.readthedocs.io/en/latest/"
